<resources>
    <string name="app_name">RestaurantManager</string>
    <string name="employee_manager">Quản lý nhân viên</string>
    <string name="account_manager">Quản lý tài khoản</string>
    <string name="order">Order</string>
    <string name="menu">Menu</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="login_with_your_phone">Login with your phone</string>
    <string name="hint_name_customer">Name</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_me">Me</string>
    <string name="title_favorite">Favarite</string>
    <string name="drawer_close">drawer close</string>
    <string name="drawer_open">drawer open</string>
    <string name="product_home">Sản phẩm nổi bật</string>
    <string name="btn_order">Đặt món</string>
    <string name="text_favorite">Thích</string>
    <string name="no_order">Bạn chưa đặt món nào tại nhà hàng</string>
    <string name="my_order">Lịch sử gọi món</string>
    <string name="order_today">Các món vừa gọi</string>
    <string name="name_employee">Tên nhân viên</string>
    <string name="id_employee">Mã nhân viên</string>
    <string name="birth_date_employee">Ngày sinh</string>
    <string name="sex_employee">Giới tính</string>
    <string name="address_employee">Địa chỉ</string>
    <string name="Phone_number_employee">Số điện thoại</string>
    <string name="email_employee">Email</string>
    <string name="position_employee">Chức vụ</string>
    <string name="hour_work_employee">Ca làm việc</string>
    <string name="name_account">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password_employee">Xác nhận mật khẩu</string>
    <string name="grant">Quyền truy cập</string>
    <string name="price_product">Giá:</string>
    <string name="name_product">Tên sản phẩm</string>
    <string name="register">Đăng ký</string>
    <string name="notification">Thông báo</string>
    <string name="message_name_empty">Họ tên không được để trống</string>
    <string name="message_address_empty">Địa chỉ không được để trống</string>
    <string name="message_phone_empty">Số điện thoại không được để trống</string>
    <string name="message_birth_empty">Ngày sinh không được để trống</string>
    <string name="message_user_name_empty">Hãy nhập tên tài khoản của bạn!</string>
    <string name="message_password_empty">Hãy nhập mật khẩu đăng ký!</string>
    <string name="message_password_confirm_empty">Hãy nhập lại mật khẩu để xác nhận đăng ký!</string>
    <string name="message_false_password">Mật khẩu không khớp. Vui lòng nhập lại!</string>
    <string name="message_password_short">Mật khẩu phải có ít nhất 8 ký tự!</string>
    <string name="message_phone_false">Số điện thoại không đúng. Vui lòng nhập lại!</string>
    <string name="message_error">Đã xảy ra lỗi!</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="or_login_by">hoặc đăng nhập bằng</string>
    <string name="you_do_not_account">Bạn chưa có tài khoản?</string>
    <string name="sing_in">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="or_sign_in_by">Hoặc đăng ký bằng</string>
    <string name="you_have_an_account">Bạn đã có tài khoản?</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="product_manager">Quản lý món ăn</string>
    <string name="bill_manager">Quản lý hóa đơn</string>
    <string name="category_manager">Quản lý danh mục</string>
    <string name="title_category">Category</string>
    <string name="add">Thêm</string>
    <string name="cancel">Hủy</string>
</resources>
