<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/name_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_name_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<!--    <TextView-->
<!--        android:text="@string/id_employee"-->
<!--        style="@style/text_style_employee"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->

    <TextView
        android:text="@string/birth_date_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_birth_date_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/sex_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_sex_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/address_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_address_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/email_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_email_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Phone_number_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_phone_number_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/position_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_position_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/hour_work_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_hour_work_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/name_account"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_user_name_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/password"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_password_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/confirm_password_employee"
        style="@style/text_style_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_confirm_password_employee"
        android:layout_marginRight="@dimen/dp_10"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save_edit_emp"
        android:background="@drawable/bg_btn"
        android:text="Lưu lại"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

</ScrollView>