<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/dp_25">

<!--    <ImageView-->
<!--        android:id="@+id/img_logo"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/ic_logo" />-->

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_above="@+id/ln_footer"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/edt_user_name"
            android:drawableRight="@drawable/ic_person"
            android:drawablePadding="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/size_16dp"
            android:background="@drawable/bg_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_below="@+id/edt_user_name"
            android:padding="@dimen/dp_10"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_5"
            android:drawableRight="@drawable/ic_lock"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/hint_password" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:text="@string/forgot_password"
            android:layout_below="@+id/edt_password"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/color_forgot_pass"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_below="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/bg_btn"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dp_20" />

        <TextView
            android:id="@+id/tv_or_login"
            android:text="@string/or_login_by"
            android:textColor="@color/text"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:layout_below="@+id/tv_or_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ic_call"
                android:padding="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/ic_gg"
                android:padding="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ln_footer"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_dont_account"
            android:text="@string/you_do_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_sing_in"
            android:text="@string/sing_in"
            android:layout_marginLeft="@dimen/dp_5"
            android:textColor="@color/color_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>