<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/dp_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_username_edit_ac"
        android:text="@string/name_account"
        style="@style/text_style_edit"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_user_name_edit_ac"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_password_edit_ac"
        android:text="@string/password"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_password_edit_ac"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_grant_edit_ac"
        android:text="@string/grant"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_grant_edit_ac"
        style="@style/text_style_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save_edit_ac"
        android:background="@drawable/bg_btn"
        android:text="Lưu lại"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>