<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ln_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_account_mng"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_account_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/account_manager"
            android:textSize="@dimen/dp_25"
            android:textColor="@color/color_text_menu_left"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--<View-->
        <!--android:background="@color/color_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dp_1"/>-->

    <LinearLayout
        android:id="@+id/ln_employee"
        app:layout_constraintTop_toBottomOf="@+id/ln_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_employee_mng"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/employee_manager"
            android:textSize="@dimen/dp_25"
            android:textColor="@color/color_text_menu_left"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_order"
        app:layout_constraintTop_toBottomOf="@+id/ln_employee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_order"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/order"
            android:textSize="@dimen/dp_25"
            android:textColor="@color/color_text_menu_left"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_menu"
        app:layout_constraintTop_toBottomOf="@+id/ln_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_menu"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_menu_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/menu"
            android:textSize="@dimen/dp_25"
            android:textColor="@color/color_text_menu_left"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:text="Logout"
        android:textSize="@dimen/dp_20"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn"
        android:textColor="@color/color_button_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>